Bug 146065. Use GetElementsByTagNameNS instead of GetElementsByTagName so that we don't get the wrong list of child elements in the accessibility code. r=pkw, sr=jst